--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>finder</name>
     <description>Finder project</description>
+
     <properties>
-        <java.version>14</java.version>
+        <java.version>11</java.version>
     </properties>
     <repositories>
         <repository>
@@ -56,22 +57,6 @@
             <version>6.0.1</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.google.apis</groupId>-->
-<!--            <artifactId>google-api-services-searchconsole</artifactId>-->
-<!--            <version>v1-rev20211026-1.32.1</version>-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>com.google.api-client</groupId>-->
-<!--            <artifactId>google-api-client-jackson2</artifactId>-->
-<!--            <version>1.20.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.google.http-client</groupId>-->
-<!--            <artifactId>google-http-client</artifactId>-->
-<!--            <version>1.23.0</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
@@ -117,6 +102,14 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
