--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,15 @@ telegram.api-url=https://api.telegram.org/;
 telegram.webhook-path=
 
 
-#news.poland.church=https://www.orthodox.pl/aktualnosci/feed/
+spring.datasource.url=jdbc:mysql://localhost:3306/Finder?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 
-# Translations
-#make.choice = "??????? ?????:"
-#make.step = "?? ???? ????:"
+spring.batch.job.enabled=false
+
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
